# hades2-agon

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  manifest.json
scripts/: AgonVersusSetupScreen.sjson  AnimationSwap.lua  Bootstrap.lua  Camera.lua  CastSlow.lua  CombatApplication.lua  Control.lua  FriendlyFire.lua  HeroContext.lua  HeroContextDiagnostics.lua  HeroContextNative.lua  HeroEvents.lua  HitInvulnerability.lua  HitStun.lua  HookUtils.lua  Hostility.lua  Log.lua  Match.lua  MatchConfig.lua  MatchEffects.lua  MatchHud.lua  MatchOrchestration.lua  Players.lua  PlayersReady.lua  Sandbox.lua  SandboxState.lua  SetupScreen.lua  Spawn.lua  TreeBlast.lua  Versus.lua  VersusTuning.lua  VisualIdentity.lua  init.lua  meta.sjson
src/: AgonLog.cpp  AgonLog.h  AgonLua.cpp  AgonLua.h  AgonSpawn.cpp  AgonSpawn.h  AnimationSwap.cpp  AnimationSwap.h  CMakeLists.txt  LuaLoadCorruptionGuard.cpp  LuaLoadCorruptionGuard.h  PlayerManagerExtension.cpp  PlayerManagerExtension.h  ProfileBoot.cpp  ProfileBoot.h  main.cpp  pch.h
